--- a/Telegram-Mac/TGPreferences.storyboard
+++ b/Telegram-Mac/TGPreferences.storyboard
@@ -485,19 +485,19 @@
         <!--Accounts-->
         <scene sceneID="vIl-kw-Zcu">
             <objects>
-                <viewController title="Accounts" id="rDU-dg-pj5" customClass="TGPreferencesViewController" customModule="Telegram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Accounts" id="rDU-dg-pj5" customClass="TGAccountsPreferencesViewController" customModule="Telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="1GY-qA-nFU">
                         <rect key="frame" x="0.0" y="0.0" width="682" height="433"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uvw-NH-jq6">
+                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="48" horizontalPageScroll="10" verticalLineScroll="48" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uvw-NH-jq6">
                                 <rect key="frame" x="20" y="38" width="170" height="375"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <clipView key="contentView" id="kOJ-Ke-2T7">
                                     <rect key="frame" x="1" y="1" width="168" height="373"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="Pr8-4X-ovS">
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="46" rowSizeStyle="automatic" viewBased="YES" id="Pr8-4X-ovS">
                                             <rect key="frame" x="0.0" y="0.0" width="168" height="373"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
@@ -516,22 +516,39 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView id="pUi-PG-Kze">
-                                                            <rect key="frame" x="1" y="1" width="165" height="17"/>
+                                                        <tableCellView identifier="AccountCellID" id="Zvk-za-JLx" customClass="AccountsTableCellView" customModule="Telegram" customModuleProvider="target">
+                                                            <rect key="frame" x="1" y="1" width="165" height="46"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="At2-nJ-gXf">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="17"/>
+                                                                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SsC-uB-D7c">
+                                                                    <rect key="frame" x="3" y="3" width="40" height="40"/>
+                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="eVc-Na-2IB"/>
+                                                                </imageView>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lyt-yR-JSo" userLabel="Account Name">
+                                                                    <rect key="frame" x="49" y="23" width="115" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="a2g-pu-5hp">
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" usesSingleLineMode="YES" id="7Ir-WH-435">
                                                                         <font key="font" metaFont="system"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Znh-kQ-wAb" userLabel="Phone Number">
+                                                                    <rect key="frame" x="49" y="4" width="120" height="17"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="+1 (123) 456-7890" id="kDO-YA-RYb">
+                                                                        <font key="font" metaFont="label" size="11"/>
+                                                                        <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                 </textField>
                                                             </subviews>
                                                             <connections>
-                                                                <outlet property="textField" destination="At2-nJ-gXf" id="7sv-Gq-4g2"/>
+                                                                <outlet property="accountNameTextField" destination="lyt-yR-JSo" id="jDA-1Y-skm"/>
+                                                                <outlet property="phoneNumberTextField" destination="Znh-kQ-wAb" id="G4t-gy-znt"/>
+                                                                <outlet property="profilePictureImageView" destination="SsC-uB-D7c" id="zaG-IP-DKv"/>
+                                                                <outlet property="textField" destination="lyt-yR-JSo" id="b0V-jU-Fxh"/>
                                                             </connections>
                                                         </tableCellView>
                                                     </prototypeCellViews>
@@ -597,6 +614,9 @@
                             </scrollView>
                         </subviews>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Pr8-4X-ovS" id="4nA-wk-vl5"/>
+                    </connections>
                 </viewController>
                 <customObject id="rx1-ji-Anw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
